--- a/docker-hub-test.yml
+++ b/docker-hub-test.yml
@@ -1,13 +1,14 @@
-version: '3.8'
 services:
   backend:
     image: nadineelsayed/proshop-backend:latest
+    platform: linux/arm64
     ports:
       - "5000:5000"
     env_file: .env
     restart: always
   frontend:
     image: nadineelsayed/proshop-frontend:latest
+    platform: linux/arm64
     ports:
       - "3000:80"
     depends_on:
