--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,22 @@
-name: Build and Push to Docker Hub
+name: Build, Scan, and Deploy
 on:
   push:
     branches: [ "main" ]
+
 jobs:
-  build-and-push:
+  security-and-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Required for Gitleaks to scan history
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      # STEP 1: Scan for Secrets
+      - name: Gitleaks Scan
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -21,20 +27,32 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Backend
+      # STEP 2: Build & Scan Backend
+      - name: Build Backend
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./backend/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
+          push: false # Don't push yet!
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest
+          load: true # Load into local docker for scanning
 
-      - name: Build and Push Frontend
-        uses: docker/build-push-action@v5
+      - name: Trivy Scan Backend
+        uses: aquasecurity/trivy-action@master
         with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/proshop-frontend:latest
+          image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '1' # Fails the pipeline if vulnerabilities found
+
+      # STEP 3: Push if Scan Passes
+      - name: Push Images
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest
+
+      # STEP 4: Deploy using Helm
+      - name: Deploy to EKS
+        run: |
+          aws eks update-kubeconfig --region us-east-1 --name your-cluster-name
+          helm upgrade --install proshop ./helm/proshop-chart \
+            --set backend.image=${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest \
+            --set frontend.image=${{ secrets.DOCKERHUB_USERNAME }}/proshop-frontend:latest
