--- a/package.json
+++ b/package.json
@@ -19,17 +19,25 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.1",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.4",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "concurrently": "^7.6.0",
+    "@types/express": "^4.17.21",
+    "body-parser": "^1.20.3",
+    "braces": "^3.0.3",
+    "concurrently": "^8.2.2",
     "markdown-toc": "^1.2.0",
-    "nodemon": "^2.0.21"
+    "nodemon": "^3.1.9"
+  },
+  "overrides": {
+    "body-parser": "1.20.3",
+    "braces": "3.0.3",
+    "qs": "6.11.1",
+    "path-to-regexp": "0.1.12"
   }
 }
