--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,11 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest'
-          # Focus only on the app dependencies (javascript) to avoid system tool false positives
-          vuln-type: 'library' 
           severity: 'CRITICAL,HIGH'
-          exit-code: '1' 
-          # This ignores the internal npm/node_modules vulnerabilities in the base image
+          exit-code: '1'
+          # ADD THESE TWO LINES BELOW:
           ignore-unfixed: true
+          vuln-type: 'library'
 
       # STEP 3: Push if Scan Passes
       - name: Push Images
