--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "multer": "^1.4.5-lts.1",
     "qs": "^6.11.1"
   },
+  "overrides": {
+    "qs": "^6.11.1",
+    "multer": "^1.4.5-lts.1",
+    "braces": "^3.0.3"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "concurrently": "^8.2.2",
