--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,9 +53,21 @@ jobs:
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest
 
       # STEP 4: Deploy using Helm
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Deploy to EKS
         run: |
+          # 1. Update the cluster name here to your actual EKS name!
           aws eks update-kubeconfig --region us-east-1 --name your-cluster-name
+          
+          # 2. Match the --set flags to our Helm values.yaml structure
           helm upgrade --install proshop ./helm/proshop-chart \
-            --set backend.image=${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest \
-            --set frontend.image=${{ secrets.DOCKERHUB_USERNAME }}/proshop-frontend:latest
+            --set backend.repository=${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend \
+            --set backend.tag=latest \
+            --set frontend.repository=${{ secrets.DOCKERHUB_USERNAME }}/proshop-frontend \
+            --set frontend.tag=latest
