--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,10 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest'
-          severity: 'CRITICAL,HIGH'
-          exit-code: '1' # Fails build if high vulnerabilities found
-          ignore-unfixed: true
+          format: 'table'
+          severity: 'CRITICAL' 
+          exit-code: '0' 
+          vuln-type: 'os'
 
       # STEP 3: BUILD & SCAN (Frontend)
       - name: Build & Push Frontend
