--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,6 +9,6 @@ FROM nginx:stable-alpine
 # Copy the build from the first stage
 COPY --from=build /app/build /usr/share/nginx/html
 # Copy the custom nginx config for the proxy
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
