--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN npm run build
 
 FROM nginx:stable-alpine
 # Copy the build from the first stage
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/frontend/build /usr/share/nginx/html
 # Copy the custom nginx config for the proxy
 COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
