--- a/helm/proshop-chart/templates/service.yaml
+++ b/helm/proshop-chart/templates/service.yaml
@@ -1,27 +1,25 @@
-# Frontend Service
 apiVersion: v1
 kind: Service
 metadata:
-  name: proshop-frontend-service
+  name: backend
 spec:
-  type: NodePort
-  selector:
-    app: proshop-frontend
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
----
-# Backend Service
-apiVersion: v1
-kind: Service
-metadata:
-  name: proshop-backend-service
-spec:
-  type: NodePort
+  type: {{ .Values.service.type }}
   selector:
     app: proshop-backend
   ports:
     - protocol: TCP
       port: 80
       targetPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: proshop-frontend-service
+spec:
+  type: {{ .Values.service.type }}
+  selector:
+    app: proshop-frontend
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
