--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      # STEP 1: GITLEAKS (Secret Scanning)
+      # STEP 1: GITLEAKS (Fails pipeline if secrets found)
       - name: Gitleaks Scan
         uses: gitleaks/gitleaks-action@v2
         env:
@@ -27,35 +27,50 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # STEP 2: BUILD & TRIVY SCAN (Backend)
-      - name: Build & Scan Backend
+      # STEP 2: BUILD & SCAN (Backend)
+      - name: Build Backend
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./backend/Dockerfile
-          push: true  # Combined build and push for speed
+          push: true
+          load: true 
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest
-          load: false 
 
-      - name: Trivy Scan Backend
+      - name: Trivy Scan Backend (HTML)
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest'
-          format: 'table'
-          severity: 'CRITICAL' 
-          exit-code: '0' 
-          vuln-type: 'os'
+          format: 'template'
+          template: '@/contrib/html.tpl'
+          output: 'trivy-backend-report.html'
 
       # STEP 3: BUILD & SCAN (Frontend)
-      - name: Build & Push Frontend
+      - name: Build Frontend
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./frontend/Dockerfile # Ensure this path is correct
+          file: ./frontend/Dockerfile
           push: true
+          load: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/proshop-frontend:latest
 
-      # STEP 4: CONFIGURE AWS & DEPLOY
+      - name: Trivy Scan Backend (HTML)
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend:latest'
+          format: 'template'
+          template: '@/contrib/html.tpl' 
+          output: 'trivy-backend-report.html'
+
+      # STEP 4: UPLOAD REPORTS
+      - name: Upload Scan Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-reports
+          path: trivy-*.html
+
+      # STEP 5: DEPLOY (Will be Green because Terraform is running)
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -65,13 +80,9 @@ jobs:
 
       - name: Deploy to EKS
         run: |
-          # Use your official cluster name from Terraform
           aws eks update-kubeconfig --region us-east-1 --name proshop-eks
-          
-          # Deploy using Helm with corrected variable names
           helm upgrade --install proshop ./helm/proshop-chart \
             --set backend.repository=${{ secrets.DOCKERHUB_USERNAME }}/proshop-backend \
             --set backend.tag=latest \
             --set frontend.repository=${{ secrets.DOCKERHUB_USERNAME }}/proshop-frontend \
-            --set frontend.tag=latest \
-            --set ingress.enabled=true
+            --set frontend.tag=latest
