--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      # STEP 1: GITLEAKS (Fails pipeline if secrets found)
+      # STEP 1: GITLEAKS (The Nuclear Fail Version)
       - name: Gitleaks Scan
         uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          # This forces it to scan the current directory and fail on any findings
-          args: detect --source . --verbose --redact --fail
+          # 'detect --no-git' forces it to scan every file in the runner, not just the commit
+          args: detect --source . --verbose --redact --fail --no-git
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
