--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      # STEP 1: GITLEAKS (The Nuclear Fail Version)
-      - name: Gitleaks Scan
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # 'detect --no-git' forces it to scan every file in the runner, not just the commit
-          args: detect --source . --verbose --redact --fail --no-git
+      # STEP 1: GITLEAKS (Forced Binary Execution)
+      # This version bypasses the Action's limitations and scans everything
+      - name: Install and Run Gitleaks
+        run: |
+          wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.2/gitleaks_8.18.2_linux_x64.tar.gz
+          tar -zxvf gitleaks_8.18.2_linux_x64.tar.gz
+          ./gitleaks detect --source . -v --exit-code 1
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -30,11 +29,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # NEW: Download the beautiful HTML template so Trivy can find it
+      # STEP 2: PREPARE TRIVY HTML REPORTING
       - name: Download Trivy HTML template
         run: wget https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/html.tpl
 
-      # STEP 2: BUILD & SCAN (Backend)
+      # STEP 3: BUILD & SCAN (Backend)
       - name: Build Backend
         uses: docker/build-push-action@v5
         with:
@@ -53,7 +52,7 @@ jobs:
           output: 'trivy-backend-report.html'
           severity: 'CRITICAL,HIGH'
 
-      # STEP 3: BUILD & SCAN (Frontend)
+      # STEP 4: BUILD & SCAN (Frontend)
       - name: Build Frontend
         uses: docker/build-push-action@v5
         with:
@@ -72,14 +71,14 @@ jobs:
           output: 'trivy-frontend-report.html'
           severity: 'CRITICAL,HIGH'
 
-      # STEP 4: UPLOAD REPORTS
+      # STEP 5: UPLOAD REPORTS
       - name: Upload Scan Reports
         uses: actions/upload-artifact@v4
         with:
           name: security-reports
           path: trivy-*.html
 
-      # STEP 5: DEPLOY
+      # STEP 6: DEPLOY TO EKS
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
