--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      # STEP 1: GITLEAKS (Forced Binary Execution)
-      # This version bypasses the Action's limitations and scans everything
+      # STEP 1: GITLEAKS (Current Files Only)
+      # --no-git ignores historical commits and only scans current workspace
       - name: Install and Run Gitleaks
         run: |
           wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.2/gitleaks_8.18.2_linux_x64.tar.gz
           tar -zxvf gitleaks_8.18.2_linux_x64.tar.gz
-          ./gitleaks detect --source . -v --exit-code 1
+          ./gitleaks detect --source . -v --exit-code 1 --no-git
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
